Embed IE6 overflow fix

--- a/app/assets/stylesheets/embed/elections/app.css.scss
+++ b/app/assets/stylesheets/embed/elections/app.css.scss
@@ -2,9 +2,6 @@ html, body {
   margin: 0;
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 12px;
-}
-
-body {
   overflow: hidden;
 }
 
